# plasma-clock-oled

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: make-arch-pkg.sh
resources/: plasma-clock-oled.desktop  resources.qrc
src/: ClockWidget.cpp  ClockWidget.h  Config.h  KDEClockConfig.cpp  KDEClockConfig.h  main.cpp
